--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,9 +80,9 @@ flutter:
         - asset: assets/fonts/circular-std-medium-500.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Gabarito
+      fonts:
+        - asset: assets/fonts/Gabarito-Bold-BF651cdf1f430c1.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
