--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/email_img.png
-    - assets/images/bell.png
+    - assets/images/
+    - assets/fonts/
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
